clang/test/BSC/Negative/Generic/TypeTrait/incomplete_struct_type.cbs
// RUN: %clang_cc1 -verify %s

// Should reject incomplete structs to prevent meaningless results.

struct I; // expected-note 4 {{forward declaration of 'struct I'}}
_Owned struct O;  // expected-note 2 {{forward declaration of 'struct O'}}

int main() {
  (void)__is_move_semantic(struct I); // expected-error {{incomplete type 'struct I' used in type trait expression}}
  (void)__is_move_semantic(struct I[]); // expected-error {{array has incomplete element type 'struct I'}}
  (void)__is_move_semantic(O); // expected-error {{incomplete type '_Owned struct O' used in type trait expression}}
  (void)__is_trivial_data(struct I); // expected-error {{incomplete type 'struct I' used in type trait expression}}
  (void)__is_trivial_data(struct I[]); // expected-error {{array has incomplete element type 'struct I'}}
  (void)__is_trivial_data(O); // expected-error {{incomplete type '_Owned struct O' used in type trait expression}}
}